==> TriAGB/TempStationEINK/Core/Src/epaper.c <==
#include "epaper.h"
#include "epdfont.h"

void epd_res_set() {
  HAL_GPIO_WritePin(epd_pins.res_port, epd_pins.res_pin, GPIO_PIN_SET);
}

void epd_res_reset() {
  HAL_GPIO_WritePin(epd_pins.res_port, epd_pins.res_pin, GPIO_PIN_RESET);
}

void epd_dc_set() {
  HAL_GPIO_WritePin(epd_pins.dc_port, epd_pins.dc_pin, GPIO_PIN_SET);
}

void epd_dc_reset() {
  HAL_GPIO_WritePin(epd_pins.dc_port, epd_pins.dc_pin, GPIO_PIN_RESET);
}

void epd_cs_set() {
  HAL_GPIO_WritePin(epd_pins.cs_port, epd_pins.cs_pin, GPIO_PIN_SET);
}

void epd_cs_reset() {
  HAL_GPIO_WritePin(epd_pins.cs_port, epd_pins.cs_pin, GPIO_PIN_RESET);
}

uint8_t epd_is_busy() {
  return HAL_GPIO_ReadPin(epd_pins.busy_port, epd_pins.busy_pin) == GPIO_PIN_RESET ? 0 : 1;
}

void epd_io_init(void) {
  GPIO_InitTypeDef GPIO_InitStructure = { 0 };

  /* configure the epaper module res pin */
  GPIO_InitStructure.Mode = GPIO_MODE_OUTPUT_PP;
  GPIO_InitStructure.Pin = epd_pins.res_pin;
  GPIO_InitStructure.Speed = GPIO_SPEED_HIGH;
  HAL_GPIO_Init(epd_pins.res_port, &GPIO_InitStructure);

  /* configure the epaper module busy pin */
  GPIO_InitStructure.Mode = GPIO_MODE_INPUT;
  GPIO_InitStructure.Pull = GPIO_PULLUP;
  GPIO_InitStructure.Pin = epd_pins.busy_pin;
  HAL_GPIO_Init(epd_pins.busy_port, &GPIO_InitStructure);

  /* configure the epaper module d/c pin */
  GPIO_InitStructure.Mode = GPIO_MODE_OUTPUT_PP;
  GPIO_InitStructure.Pin = epd_pins.dc_pin;
  GPIO_InitStructure.Pull = GPIO_PULLUP; // возможно
  GPIO_InitStructure.Speed = GPIO_SPEED_HIGH;
  HAL_GPIO_Init(epd_pins.dc_port, &GPIO_InitStructure);

  /* configure the epaper module cs pin */
  GPIO_InitStructure.Mode = GPIO_MODE_OUTPUT_PP;
  GPIO_InitStructure.Pin = epd_pins.cs_pin;
  GPIO_InitStructure.Speed = GPIO_SPEED_HIGH;
  HAL_GPIO_Init(epd_pins.cs_port, &GPIO_InitStructure);

  /* configure the epaper module spi2 sck mosi pin */
//  GPIO_InitStructure.GPIO_Mode = GPIO_Mode_AF_PP;
//  GPIO_InitStructure.GPIO_Pin = GPIO_Pin_15;
//  GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
//  GPIO_Init(GPIOB, &GPIO_InitStructure);
//  GPIO_InitStructure.GPIO_Mode = GPIO_Mode_AF_PP;
//  GPIO_InitStructure.GPIO_Pin = GPIO_Pin_13;
//  GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
//  GPIO_Init(GPIOB, &GPIO_InitStructure);
  /* configure spi2 */
//  RCC_APB1PeriphClockCmd(RCC_APB1Periph_SPI2, ENABLE);
//
//  spiConfig.SPI_DataSize = SPI_DataSize_8b;
//  spiConfig.SPI_BaudRatePrescaler = SPI_BaudRatePrescaler_16;
//  spiConfig.SPI_Direction = SPI_Direction_1Line_Tx;
//  spiConfig.SPI_FirstBit = SPI_FirstBit_MSB;
//  spiConfig.SPI_Mode = SPI_Mode_Master;
//  spiConfig.SPI_CPOL = SPI_CPOL_High;
//  spiConfig.SPI_CPHA = SPI_CPHA_2Edge;
//  spiConfig.SPI_NSS = SPI_NSS_Soft;
//  SPI_Init(SPI2, &spiConfig);
//  SPI_Cmd(SPI2, ENABLE);
}

uint8_t epd_init_partial(void) {
  if (epd_init()) return 1;
  return epdWriteBytes(0x32, ut_partial, sizeof(ut_partial));
}
